[package]
name = "ds2s-heap-x"
version = "0.1.3"
edition = "2021"

[lib]
name = "ds2s_heap_x"
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

[dependencies.windows]
version = "0.61"
features = [
    "Win32_Storage_FileSystem",
    "Win32_System_LibraryLoader",
    "Win32_System_Memory",
    "Win32_System_SystemServices",
]

[profile.release]
panic = "abort"
